--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Song Queue</title>
 </head>
 
-<body>
+<body tabindex="-1">
 
     <template id="template-available-item">
         <div class="available-item-name"></div>
