--- a/dj.html
+++ b/dj.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.webmanifest">
 </head>
 
-<body>
+<body tabindex="-1">
     <div id="ruler"></div>
 
     <template id="template-button-item">
