--- a/dj.html
+++ b/dj.html
@@ -170,7 +170,7 @@
             this.bpm = effectsConfig[this.effect].bpm;
 
             this.querySelector(".button-name").textContent = this.effect;
-            this.querySelector(".button-length").textContent = this.length;
+            this.querySelector(".button-length").textContent = decimal(this.length, 2);
             this.querySelector(".button-button").textContent = this.trigger;
             if(effectsConfig[this.effect].loop){
                 this.querySelector(".button-loop").textContent = "∞";
@@ -459,6 +459,10 @@
     // rateNextElem.onblur = function(){
     //     fixRate();
     // }
+
+    function decimal(num, place) {
+        return Math.round(num * Math.pow(10, place)) / Math.pow(10, place)
+    }
     
     function changeValue(num){
         rateNext = Math.max(0.1, Math.min(300, rateNext + num));
@@ -569,7 +573,7 @@
         font-family: sans-serif;
         font-size: 0;
         color: hsl(0, 0%, 80%);
-        background-color: hsl(0, 0%, 8%);
+        background-color: hsl(0, 0%, 4%);
     }
 
     #ruler {
@@ -594,7 +598,6 @@
         border-radius: 0.5vw;
         display: block;
         background-color: hsl(0, 0%, 15%);
-        cursor: pointer;
     }
 
     profile-item:active{
@@ -650,7 +653,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(120, 100%, 24%);
-        cursor: pointer;
     }
 
     #page-label{
@@ -680,7 +682,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(120, 100%, 24%);
-        cursor: pointer;
     }
 
     button-table{
@@ -712,7 +713,6 @@
         border-radius: 0.5vw;
         background-color: hsl(0, 0%, 12%);
         display: inline-block;
-        cursor: pointer;
         transition: transform 50ms linear;
     }
 
@@ -783,7 +783,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(20, 100%, 35%);
-        cursor: pointer;
     }
 
     #update{
@@ -799,7 +798,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(40, 100%, 35%);
-        cursor: pointer;
     }
 
     #clear{
@@ -815,7 +813,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(0, 100%, 24%);
-        cursor: pointer;
     }
 
     #rate-curr {
@@ -861,7 +858,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(204, 100%, 24%);
-        cursor: pointer;
     }
 
     #rate-dec{
@@ -877,7 +873,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(120, 100%, 24%);
-        cursor: pointer;
     }
 
     #rate-inc{
@@ -893,7 +888,6 @@
         justify-content: center;
         align-items: center;
         background-color: hsl(120, 100%, 24%);
-        cursor: pointer;
     }
 
     .button:active{
