--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             if(msg.effects){
                 effectsConfig = msg.effects;
                 for(let effect_name in effectsConfig){
-                    if('song' in effectsConfig[effect_name]){
+                    if('song_path' in effectsConfig[effect_name]){
                         if(!(effect_name in available)){
                             available[effect_name] = new AvailableItem(effect_name);
                             availableList.append(available[effect_name]);
@@ -179,7 +179,7 @@
             this.effect = effect;
             this.name = this.querySelector(".available-item-name");
             this.artist = this.querySelector(".available-item-artist");
-            this.song = effectsConfig[this.effect].song;
+            this.song = effectsConfig[this.effect].song_path;
 
             this.name.textContent = songsConfig[this.song].name;
             this.artist.textContent = songsConfig[this.song].artist;
@@ -231,7 +231,7 @@
             this.num = num;
             this.key = key;
             this.used = true;
-            this.song = effectsConfig[this.effect].song;
+            this.song = effectsConfig[this.effect].song_path;
             this.name.textContent = songsConfig[this.song].name;
             this.artist.textContent = songsConfig[this.song].artist;
             this.style.visibility = "visible";
@@ -568,7 +568,7 @@
         position: absolute;
         width: 65%;
         bottom: 10%;
-        left: 10%;
+        left: 5%;
         font-size: 3vw;
         overflow: hidden;
         white-space: nowrap;
@@ -624,7 +624,7 @@
         position: absolute;
         width: 65%;
         bottom: 10%;
-        left: 10%;
+        left: 5%;
         font-size: 3vw;
         overflow: hidden;
         white-space: nowrap;
