--- a/index.html
+++ b/index.html
@@ -109,6 +109,19 @@
                 }
             }
 
+            if(msg.status){
+                if(playing != msg.status.playing){
+                    playing = msg.status.playing;
+                    if(playing){
+                        playButton.classList.add("pause");
+                        playButton.classList.remove("play");
+                    }else{
+                        playButton.classList.add("play");
+                        playButton.classList.remove("pause");
+                    }
+                }
+            }
+
             if(msg.queue){
                 queueConfig = msg.queue;
                 let index = 0;
@@ -130,7 +143,7 @@
                 }
                 for(let i=0; i<queueConfig.length; i++){
                     let effect_name = queueConfig[i][0];
-                    let num = queueConfig[i][1];
+                    let salt = queueConfig[i][1];
                     let key = queueConfig[i].join('-');
 
                     if(!(key in queue)){
@@ -138,7 +151,7 @@
                             index++;
                         }
                         queue[key] = queueArray[index];
-                        queue[key].setSong(effect_name, num, key);
+                        queue[key].setSong(effect_name, salt, key);
                         queue[key].setPosition(i);
                     }
                 }
@@ -151,19 +164,6 @@
 
                 console.log("--QUEUE--");
                 console.log(queue);
-            }
-
-            if(msg.status){
-                if(playing != msg.status.playing){
-                    playing = msg.status.playing;
-                    if(playing){
-                        playButton.classList.add("pause");
-                        playButton.classList.remove("play");
-                    }else{
-                        playButton.classList.add("play");
-                        playButton.classList.remove("pause");
-                    }
-                }
             }
         }
     }
@@ -202,7 +202,7 @@
             this.appendChild(templateQueueItem.content.cloneNode(true));
 
             this.effect = null
-            this.num = null;
+            this.salt = null;
             this.name = this.querySelector(".queue-item-name");
             this.artist = this.querySelector(".queue-item-artist");
             this.song = null;
@@ -215,7 +215,7 @@
             this.removeButton = this.querySelector(".queue-item-remove");
             this.removeButton.onclick = (event)=>{
                 event.preventDefault();
-                removeQueue(this.effect, this.num);
+                removeQueue(this.effect, this.salt);
             };
         }
 
@@ -224,11 +224,16 @@
                 this.position = position;
                 this.style.transform = "translateY("+(this.position*11)+"vh)";
             }
+            if(position == 0 && playing){
+                this.classList.add('queue-playing');
+            }else{
+                this.classList.remove('queue-playing');
+            }
         }
 
-        setSong(effect, num, key){
+        setSong(effect, salt, key){
             this.effect = effect;
-            this.num = num;
+            this.salt = salt;
             this.key = key;
             this.used = true;
             this.song = effectsConfig[this.effect].song_path;
@@ -241,6 +246,7 @@
             this.used = false;
             delete queue[this.key];
             this.style.visibility = "hidden";
+            this.classList.remove('queue-playing');
         }
     }
     customElements.define('queue-item', QueueItem);
@@ -275,11 +281,11 @@
         console.log(msg);
     }
 
-    function removeQueue(effect, num){
+    function removeQueue(effect, salt){
         let msg = {
             type: "remove_queue",
             effect: effect,
-            num: num
+            salt: salt
         };
         socket.send(JSON.stringify(msg));
         console.log(msg);
@@ -594,6 +600,7 @@
     }
 
     #queue-list{
+
     }
 
     queue-item{
@@ -607,6 +614,10 @@
         background-color: hsl(0, 0%, 12%);
         will-change: transform;
         transition: transform 150ms;
+    }
+
+    .queue-playing{
+        background-color: hsl(204, 100%, 16%);
     }
 
     .queue-item-name {
