--- a/index.html
+++ b/index.html
@@ -107,8 +107,10 @@
             if(msg.effects){
                 effectsConfig = msg.effects;
                 for(let effect_name in effectsConfig){
+                    console.log(effect_name)
                     if('song_path' in effectsConfig[effect_name]){
-                        if(!(effect_name in available)){
+                        console.log('has song')
+                        if(!(effect_name in available) && effectsConfig[effect_name].song_path in songsConfig){
                             available[effect_name] = new AvailableItem(effect_name);
                             availableList.append(available[effect_name]);
                         }
