--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@
         localStorage.setItem('uuid', uuid)
         console.log("new user: " + uuid);
     }
+    console.log("----UUID----")
+    console.log(uuid);
 
     const windowWidth = window.innerWidth;
     const windowHeight = window.innerHeight;
