--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     console.log(effect_name)
                     if('song_path' in effectsConfig[effect_name]){
                         console.log('has song')
-                        if(!(effect_name in available) && effectsConfig[effect_name].song_path in songsConfig){
+                        if(!(effect_name in available)){
                             console.log('adding')
                             available[effect_name] = new AvailableItem(effect_name);
                             availableList.append(available[effect_name]);
